all final revisions

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -693,36 +693,25 @@
             <div class="block"><img src="images/programmes/ad_median.JPG" class="img-responsive Prog_Image">
                 <div class="requirments_description Admissions_mmai">
                     <h1 class="prog-title">Admission Requirements</h1>
-                    <p>Applicants should normally:
-                        <br>
-                        <ol>
-                        <li class="list-alphabet">Possess a Bachelor's degree in science, engineering, business or other relevant fields from a recognized university or equivalent qualification; and
+                    <h5>Academic Qualification</h5>
+                    <p>Applicants should possess a bachelor’s degree with honours from a recognised university or institution.</p>                        
+                    <h5>Language Proficiency Requirement</h5>
+                    <p>Applicants should be able to communicate in English at an advanced level, possessing one or more of the following qualifications if they did not study in an English-speaking institution:</p>
+                    <ol>
+                        <li class="list-number"> an IELTS overall band score of at least 6.0; or</li>
+                        <li class="list-number"> a minimum score of 74 in TOEFL (iBT); or</li>
+                        <li class="list-number"> a minimum score of 450 in CET-6.</li>
+                    </ol>
+                    <h5>Others</h5>
+                    <ol>
+                        <li class="list-alphabet">Applicants should submit a 500-word letter of interest in English.
+                        </li>
+                        <li class="list-alphabet">Applicants should submit a work portfolio (publications, demonstration, GitHub repositories, personal websites, etc), and provide other qualifications and awards, if any.
+                        </li>
+                        <li class="list-alphabet">Applicants should provide two reference letters.
                             <br>
                         </li>
-                        <li class="list-alphabet">If applicants did not use English as the medium of learning in their Bachelor’s degree programmes, they should satisfy any one of the following English proficiency requirements:
-                            <br>
-                            <ol>
-                                <li> An IELTS overall band score of at least 6.0;
-                                    <br>
-                                </li>
-                                <li > A TOEFL score of at least 537 (paper-based) or 74 (Internet-based);</li>
-                                <li> Other equivalent qualifications (e.g. CET-6 score of at least 450, CEFR level C1 or above)</li>
-                            </ol>
-                        </li>
-                        <li class="list-alphabet">Submit a 500-word letter of interest in English; 
-                            <br>
-                        </li>
-                        <li class="list-alphabet">Submit work portfolio (publications, demonstration, GitHub repositories, personal websites), if any; 
-                            <br>
-                        </li>
-                        <li class="list-alphabet">Other qualifications and awards, if any; 
-                            <br>
-                        </li>
-                        <li class="list-alphabet">Two reference letters.
-                            <br>
-                        </li>
-                        </ol>
-                    </p>
+                    </ol>
                     <!-- <p class="content-sub-title">Duration of Study</p>
                     <p>The programme can be taken on a full-time basis in one year or on a part-time basis in two years. The
                         maximum lengths allowed for full-time and part-time mode are 24 and 36 months respectively.</p> -->
